# mario_curiosity.scene_agents

./: .beluga_readme.txt  .gitignore  README.md  functions.py  main.py  pyproject.toml  requirements.txt  requirements_hpc.txt  tasks.py
code/: emulation.py  functions.py  load_data.py  main.py  utils.py
sourcedata/scene_clips/: dataset_description.json  processing_log.txt
sourcedata/scene_clips/sub-01/ses-001/beh/clips/: sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101000000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101010000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101020000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101030000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101040000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101050000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101060000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101070000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101080000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101090000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-0_clip-00101100000122_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-10_clip-00101000002331_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-10_clip-00101000003476_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-10_clip-00101010002553_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-10_clip-00101020001148_beh.json  sub-01_ses-001_run-01_level-w1l1_scene-10_clip-00101030001191_beh.json  (+624 more)
(+101445 files in other folders)
